@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-11-06T00:43:40Z",
-  "count_outdated" : 6018,
-  "uniques_outdated" : 1256,
+  "timestamp" : "2025-11-07T00:43:34Z",
+  "count_outdated" : 6022,
+  "uniques_outdated" : 1258,
   "count" : 6059,
   "uniques" : 1275,
   "views" : [
-    {
-      "timestamp": "2025-10-23T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
-      "count_decinc": [ 0, 4 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2025-10-24T00:00:00Z",
       "count": 3,
