@@ -1,12 +1,7 @@
 {
-  "count": 41,
-  "uniques": 19,
+  "count": 37,
+  "uniques": 17,
   "views": [
-    {
-      "timestamp": "2025-10-23T00:00:00Z",
-      "count": 4,
-      "uniques": 2
-    },
     {
       "timestamp": "2025-10-24T00:00:00Z",
       "count": 3,
