@@ -1,3 +1,12 @@
+2025-11-07T00:43:34Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19154441610 # 1290
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-07
+* notice: last 14d: unq all: 17 37
+* notice: prev accum: outdated-unq outdated-all / unq all: 1256 6018 / 1275 6059
+* notice: next accum: outdated-unq outdated-all / unq all: 1258 6022 / 1275 6059
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-10-23] / []
+
 2025-11-06T00:43:40Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19120987619 # 1288
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-06
